package com.laurenci.hydrotrack.core.drink;

public enum DrinkArea {
    SYSTEM, CUSTOM
}
