package com.laurenci.hydrotrack.core.drink;

public enum DrinkGroup {
    WATER, TEA, COFFEE, ENERGY_DRINK
}
